--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,16 @@ version = "1.5.0"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+PlotUtils = "995b91a9-d308-5afd-9ec6-746e21dbc043"
+
+[weakdeps]
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+MakieCore = "20f20a25-4f0e-4fdf-b5d1-57303727442b"
+TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
+
+[extensions]
+UnixTimesMakieExt = ["Makie", "MakieCore"]
+UnixTimesTimeZonesExt = "TimeZones"
 
 [compat]
 TimeZones = "1"
@@ -16,9 +26,3 @@ TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 
 [targets]
 test = ["Test", "TimeZones"]
-
-[weakdeps]
-TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
-
-[extensions]
-UnixTimesTimeZonesExt = "TimeZones"
