--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,23 @@
 name = "UnixTimes"
 uuid = "ab1a18e7-b408-4913-896c-624bb82ed7f4"
 authors = ["Christian Rorvik <christian.rorvik@gmail.com>"]
-version = "1.5.0"
+version = "1.6.0"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 
+[weakdeps]
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
+TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
+
+[extensions]
+UnixTimesMakieExt = ["Makie", "Observables"]
+UnixTimesTimeZonesExt = "TimeZones"
+
 [compat]
+Makie = "0.22"
+Observables = "0.5"
 TimeZones = "1"
 julia = "1.9"
 
@@ -16,9 +27,3 @@ TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 
 [targets]
 test = ["Test", "TimeZones"]
-
-[weakdeps]
-TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
-
-[extensions]
-UnixTimesTimeZonesExt = "TimeZones"
