--- a/Project.toml
+++ b/Project.toml
@@ -10,9 +10,11 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
+StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 
 [extensions]
 UnixTimesMakieExt = ["Makie", "Observables"]
+UnixTimesStructTypesExt = "StructTypes"
 UnixTimesTimeZonesExt = "TimeZones"
 
 [compat]
