--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,6 @@ UnixTimesStructTypesExt = "StructTypes"
 UnixTimesTimeZonesExt = "TimeZones"
 
 [compat]
-JSON3 = "1"
 Makie = "0.22"
 Observables = "0.5"
 TimeZones = "1"
@@ -27,7 +26,6 @@ julia = "1.9"
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
-JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 
 [targets]
-test = ["Test", "TimeZones", "JSON3"]
+test = ["Test", "TimeZones"]
