--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ UnixTimesStructTypesExt = "StructTypes"
 UnixTimesTimeZonesExt = "TimeZones"
 
 [compat]
-Makie = "0.22"
+Makie = "0.22, 0.23, 0.24"
 Observables = "0.5"
 TimeZones = "1"
 julia = "1.9"
